카테고리 탭 분리 및 이미지 추가, 로그인 토큰 보관/복구 로직 수정